adjustments added after going in Gryphon

--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
+<head>
+    <script src="https://cdn.rawgit.com/kristiwalker/dth-religion-nc-ga/gh-pages/script.js"></script>
+</head>
+
+<body>
 <style>
+select{
+   color:#222
+}
     .number-div{
         font-size: 60px;
         margin-bottom: -21px;
@@ -11,8 +19,7 @@
 <html>
 <div class="select-div" align="center">
     <select id="categories" onchange="myFunction()"
-        <option value="choose">Choose a category</option>
-        <option value="choose">Choose a category</option>
+        <option value="choose">Choose a response</option>
         <option value="protestant">Protestant traditions</option>
         <option value="catholic">Catholic</option>
         <option value="lds">Later Day Saints</option>
@@ -200,4 +207,4 @@
 </svg>
 
 </div>
-
+</body>
